--- a/index.html
+++ b/index.html
@@ -8,79 +8,119 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 	<title>My Portofolio</title>
 </head>
 <body>
-	<!--Jumbotron-->
-	<div class="jumbotron text-center" >
-		<img src="img/profil.JPG" alt="Yohanssen" class="img-circle">
-		<h1>Yohanssen Pardede</h1>
-		<p>Student | Web Developer</p>
+
+	<!-- Navbar -->
+	<nav class="navbar fixed-top navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd;">	
+		<div class="container">
+		<a class="navbar-brand" href="#">Yohanssen Pardede</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  <div class="navbar-nav">
+			<a class="nav-item nav-link active" href="#home">Home <span class="sr-only">(current)</span></a>
+			<a class="nav-item nav-link" href="#about">About</a>
+			<a class="nav-item nav-link" href="#portofolio">Portofolio</a>
+			<a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+		  </div>
+		</div>
 	</div>
+	  </nav>
+	<!-- Akhir Navbar -->
+	<!--Jumbotron-->
+	<div class="jumbotron jumbotron-fluid">
+		<div id="home" class="container text-center">
+			<img src="img/profil.JPG" alt="Yohanssen" class="rounded-circle img-thumbnail" width="30%" >
+			<h1 class="display-4">Yohanssen Pardede</h1>
+		  <p class="lead">Student | Web Developer</p>
+		</div>
+	  </div>
 	<!--Akhir Jumbotron-->
 	
 	<!-- about -->
 <section class="about" id="about">
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<h2 class="text-center">About</h2>
+			<div class="row mb-4">
+				<div class="col text-center">
+					<h2>About</h2>
 					<hr>
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-sm-6">
+			<div class="row text-justify justify-content-center">
+				<div class="col-md-5">
 					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime numquam sunt corrupti totam vitae, deleniti possimus autem alias recusandae nulla, praesentium temporibus deserunt! Sapiente ipsum ad quo cumque magnam libero.</p>
 				</div>
 
-				<div class="col-sm-6">
+				<div class="col-md-5">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium asperiores ipsam eveniet aperiam quis reprehenderit vero earum voluptatem, saepe molestiae delectus iure esse sed cupiditate corporis? Odit architecto consequuntur harum.</p>
 				</div>
 			</div>
-		</div>
+		</div> 
 </section>
 	<!-- Akhir about -->
 
 	<!-- Portofolio -->
-	<section class="portofolio" id="portofolio">
+	<section class="portofolio bg-light pb-4" id="portofolio">
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 text-center">
+			<div class="row mb-4 pt-4">
+				<div class="col text-center">
 					<h2>Portofolio</h2>
 					<hr>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-sm-4">
-					<a href="" >
-						<img src="img/1.JPG" alt="1"class="img-thumbnail">
-					</a>
+				<div class="col-md mb-4">
+					<div class="card" >
+						<img src="img/1.JPG" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<a href="" >
-						<img src="img/2.JPG" alt="2"class="img-thumbnail">
-					</a>
+				<div class="col-md">
+					<div class="card" >
+						<img src="img/2.JPG" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
+				</div><div class="col-md">
+					<div class="card" >
+						<img src="img/3.JPG" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
+			</div>
+			<div class="row">
+			<div class="col-md mb-4">
+				<div class="card" >
+					<img src="img/4.JPG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<a href="" >
-						<img src="img/3.JPG" alt="3"class="img-thumbnail">
-					</a>
+			</div><div class="col-md">
+				<div class="card" >
+					<img src="img/5.JPG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<a href="" >
-						<img src="img/4.JPG" alt="4"class="img-thumbnail">
-					</a>
-				</div><div class="col-sm-4">
-					<a href="" >
-						<img src="img/5.JPG" alt="5"class="img-thumbnail">
-					</a>
-				</div><div class="col-sm-4">
-					<a href="" >
-						<img src="img/6.JPG" alt="6"class="img-thumbnail">
-					</a>
+			</div><div class="col-md">
+				<div class="card" >
+					<img src="img/6.JPG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
 				</div>
+			</div>
 			</div>
 		</div>
 	</section>
@@ -88,15 +128,29 @@
 	<!-- Kontak -->
 	<section class="contact" id="contanct">
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 text-center">
-				<h2>Contact</h2>
+			<div class="row pt-4 mb-4">
+				<div class="col text-center">
+				<h2>Contact Us</h2>
 				<hr>
 				</div>
 			</div>
+		<div class="row">
+			<div class="col-lg-4 text-center">
+				<div class="card text-white bg-primary mb-3">
+				<div class="card-body">
+					<h5 class="card-title">Contact us</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quasi.</p>
+				</div>
+				</div>
+				<ul class="list-group">
+					<li class="list-group-item"><h3>Location</h3></li>
+					<li class="list-group-item">My Home</li>
+					<li class="list-group-item">Jl. Terentang</li>
+					<li class="list-group-item">Riau, Indonesia</li>
 
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2">
+				  </ul>
+			</div>
+				<div class="col-lg-6 pb-4">
 					<form action="">
 						<div class="form-group">
 							<label for="nama">Nama</label>
@@ -129,15 +183,15 @@
 	<!-- Akhir kontak -->
 
 	<!-- Footer -->
-	<footer>
+	<footer class="bg-dark text-white">
 		<div class="container text-center">
 			<div class="row">
-				<div class="col-sm-12">
+				<div class="col pt-4">
 					<p>&copy;Copyright 2020 | Built by <a href="https://www.instagram.com/yohanssen_p/" target="_blank">Yohanssen Pardede</a></p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12">
+				<div class="col mb-3">
 					<a href="https://www.youtube.com/channel/UCUl89FLoUe5MkQpAD3A-TGQ?view_as=subscriber" class="btn btn-danger" target="_blank"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-play" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 						<path fill-rule="evenodd" d="M10.804 8L5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z"/>
 					  </svg>Subscribe to Youtube</Sub></a>
